[tool.poetry]
name = "aztec-circulating-supply-api"
version = "1.0.0"
description = "Aztec circulating supply calculator and API"
authors = ["Aztec"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^7.0.0"
eth-abi = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
